--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sdvn_comfy_node"
-description = "Update Loop - List - Repeat node"
-version = "1.2"
+description = "Update Auto Generate Node"
+version = "1.3.0"
 license = {file = "LICENSE"}
 dependencies = ["#If MacOs - Please install aria2 manually via brew", "aria2;sys_platform != 'darwin'", "openai", "gallery-dl", "google-generativeai", "googletrans-py"]
 
