update gemini api

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aria2;sys_platform != 'darwin'
 openai
 gallery-dl
 instaloader
-google-generativeai
 googletrans-py
 gradio_client>=1.5.4
 opencv-python
+google-genai
