--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sdvn_comfy_node"
-description = "Update Apply Style"
-version = "1.4.3"
+description = "Update IC Lora Layout Support Node"
+version = "1.4.4"
 license = {file = "LICENSE"}
 dependencies = ["#If MacOs - Please install aria2 manually via brew", "aria2;sys_platform != 'darwin'", "openai", "gallery-dl", "google-generativeai", "googletrans-py"]
 
