--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sdvn_comfy_node"
-description = "Update Support Inpaint crop and loop"
-version = "1.5.2"
+description = "Update Adv Auto Generate"
+version = "1.6.0"
 license = {file = "LICENSE"}
 dependencies = ["#If MacOs - Please install aria2 manually via brew", "aria2;sys_platform != 'darwin'", "openai", "gallery-dl", "google-generativeai", "googletrans-py"]
 
